--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --mode prod",
+    "build": "vite build --mode prod && cp _redirects dist",
     "preview": "vite preview"
   },
   "dependencies": {
